Most commands now supported